IGNITE-19107: Remove LATEST semantic from deployment API
